Edited w abs charts

--- a/Polymers lab/1/Polymers 1.tex
+++ b/Polymers lab/1/Polymers 1.tex
@@ -393,7 +393,7 @@ In Figure \ref{fig:wabs2} the charts reporting water absorption over time for th
 
 The second chart is the less precise. This can be explained by the poor control over the sample during processing, indeed polymerization has abruptly started still during formation, with strong release of heat (as seen also in heat of polymerization measurements, where the heat ramp starts from about $50^\circ$C) and thus poor control of the porosity. Manipulation and formation of the sample was stopped in favor of the temperature ramp measurement. The third sample S3 has a completely different behavior in water absorption with respect to S1 and S2. This can be related to a much higher amount of open porosity, macroscopically visible by sample examination. Although this remarkable difference, literature results of PMMA water absorption are closer to S3 and sticks results, about 2\%. After about two weeks from initial soaking, the water absorption reaches a plateau. 
 
-In Table \ref{tab:wabs} the results of water absorption for sticks and spheroids are reported, after one month from the soaking. 
+In Table \ref{tab:wabs} the results of water absorption for sticks and spheroids are reported, after 50 days from the soaking. 
 \begin{table}[htp]
 \centering
 $
@@ -401,18 +401,18 @@ $
 \toprule
 \textbf{Sample} & \textbf{$\%$water abs}  \\
 \midrule
-\text{P1} & 1.90\pm0.74 \\
-\text{P1HT} & 2.04\pm0.35 \\
-\text{P2} & 2.38\pm0.47 \\
-\text{P2HT} & 1.79\pm0.10 \\
+\text{P1} & 2.33 \pm0.18 \\
+\text{P1HT} & 2.31\pm0.16 \\
+\text{P2} & 3.05\pm0.09 \\
+\text{P2HT} & 2.28\pm0.17 \\
 \midrule
-\text{S1} & 0.70 \\
-\text{S2} & 0.71 \\
-\text{S3} & 2.26 \\
+\text{S1} & 1.29 \\
+\text{S2} & 1.26 \\
+\text{S3} & 2.82 \\
 \bottomrule
 \end{array}
 $
-\caption{Water absorption measurements.}
+\caption{Water absorption measurements after 50 days from the soaking.}
 \label{tab:wabs}
 \end{table}\\
 
