--- a/Polymers lab/1/Polymers 1.tex
+++ b/Polymers lab/1/Polymers 1.tex
@@ -171,7 +171,7 @@ Additional methyl methacrylate monomer has been provided by University of Trento
 
 \subsection{Sample preparation}
 
-Parts contained in the medical kit has been weighted with instrument Mettler PM460. Both full and empty containers of the powder and the liquid has been weighted, in order to have a feedback of possible losses of material. Disposable bowls and rods in polyethylene (PE), provided along with the kit, have been weighted as well, and used for the preparation of samples. Reagents have been poured in the bowl, first putting the powder and then the liquid, and stirred vigorously with the rod, till the viscosity of the system was enough to allow for manipulation and formation of samples: a spherical one and a defined number of sticks, that have been pressed in a polytetrafluoroethylene (PTFE) mold. Prior to the beginning of the polymerization, the spheroid has been weighted for subsequent heat of polymerization measurments. A thermometer has been inserted inside the spheroid interposing an aluminum foil, to prevent the direct contact with the reacting polymer and avoiding sticking effects. The system including the thermometer has been put quickly in a chamber full of expanded polystyrene (EPS) and an aluminum foil has been wrapped around of it, to minimize heat losses and to get a more precise measurement of temperature variation. Measurements of temperature has been taken as polymerization process occured, until the achievement of maximum temperature. Moreover, a few further temperature measurements have been taken after the pick to highlight the shape of the temperature-time curve. Four sticks, once polymerized, have been cured at $90^\circ$C for 10 minutes and subsequently weighted in order to report for mass losses due to polymerization and evaporation of liquid monomer. All stick and spheroid samples have been soaked in water to study the water absorption of the material. 
+Parts contained in the medical kit has been weighted with instrument Mettler PM460 (sens. $\pm 0.001\,\text{g}$). Both full and empty containers of the powder and the liquid has been weighted, in order to have a feedback of possible losses of material. Disposable bowls and rods in polyethylene (PE), provided along with the kit, have been weighted as well, and used for the preparation of samples. Reagents have been poured in the bowl, first putting the powder and then the liquid, and stirred vigorously with the rod, till the viscosity of the system was enough to allow for manipulation and formation of samples: a spherical one and a defined number of sticks, that have been pressed in a polytetrafluoroethylene (PTFE) mold. Prior to the beginning of the polymerization, the spheroid has been weighted for subsequent heat of polymerization measurments. A thermometer has been inserted inside the spheroid interposing an aluminum foil, to prevent the direct contact with the reacting polymer and avoiding sticking effects. The system including the thermometer has been put quickly in a chamber full of expanded polystyrene (EPS) and an aluminum foil has been wrapped around of it, to minimize heat losses and to get a more precise measurement of temperature variation. Measurements of temperature has been taken as polymerization process occured, until the achievement of maximum temperature. Moreover, a few further temperature measurements have been taken after the pick to highlight the shape of the temperature-time curve. Four sticks, once polymerized, have been cured at $90^\circ$C for 10 minutes and subsequently weighted in order to report for mass losses due to polymerization and evaporation of liquid monomer. All stick and spheroid samples have been soaked in water to study the water absorption of the material. 
 In Table \ref{tab:code} coding for samples is reported. 
 \begin{table}[htp]
 \centering
@@ -198,7 +198,7 @@ $
 
 The number of obtainable sticks has been calculated considering shape, dimensions 
 of molds, density ($1.5\,\text{g/cm}^3$) and weigth of the whole kit.
-The ratio between the total volume of mixture and the volume of a mold gives the theoretical number of possible sticks that is equal to 8.
+The ratio between the total volume of mixture and the volume of a mold gives the theoretical number of possible sticks that is equal to 8 with width of $10.15\,\text{mm}$, lenght $130.04\,\text{mm}$ and thickness $3.30\,\text{mm}$.
 However part of mixture has been used for the preparation of spheroid and thus the number of sticks produced is less.
 
 \section{Experimental activity}
@@ -222,6 +222,7 @@ Where $c_p$ ($\frac{\text{J}}{\text{g}^\circ\text{C}}$) is the specific thermal 
 \Delta H_{sp} = \frac{\Delta H}{m}
 \label{eq:spheat} 
 \end{equation}
+Where $m$ is the the same mass considered in Equation \ref{eq:heat}. \\
 In the case of copolymerization of MMA and HEMA, the specific heat has been calculated with Equation \ref{eq:copoly}:
 \begin{equation}
 \Delta H_{sp} = \Delta H_{sp}^\text{MMA} + \Delta H_{sp}^\text{HEMA}
@@ -252,7 +253,7 @@ Where $n_\textup{MMA}$ is the number of moles of MMA in the spheroid, $n_\textup
 \text{MW} = \text{DP}\cdot m^*_{mon}
 \label{eq:mw2} 
 \end{equation}
-In this case $m^*_{mon}$ is the weighted mean of molecular weights of MMA and HEMA. \par 
+In this case $m^*_{mon}$ is the weighted mean of molecular weights of MMA ($100\,\text{g/mol}$) and HEMA ($130\,\text{g/mol}$). \par 
 In both cases, for Flory principle, different chains have been supposed to have same propagation speed during polymerization. 
 
 \subsection{Effect of heat treatment after polymerization}
@@ -281,13 +282,13 @@ In Table \ref{tab:heat} heat of polymerization results are reported.
 \begin{table}[htp]
 \centering
 $
-\begin{array}{ccccc}
+\begin{array}{ccccccc}
 \toprule
-\textbf{Sample} & \mathbf{\Delta H}\,(\text{J}) & \mathbf{\Delta H_{sp}^{MMA}}\,(\text{J}/\text{g}) & \mathbf{\Delta H_{sp}^{MMA}}\,(\text{kJ}/\text{mol}) & \mathbf{\Delta H_{sp}^{HEMA}}\,(\text{J}/\text{g}) \\
+\textbf{Sample} & \mathbf{\Delta T}\,(\text{K}) &  \mathbf{m}\,(\text{g}) & \mathbf{\Delta H}\,(\text{J}) & \mathbf{\Delta H_{sp}^{MMA}}\,(\text{J}/\text{g}) & \mathbf{\Delta H_{sp}^{MMA}}\,(\text{kJ}/\text{mol}) & \mathbf{\Delta H_{sp}^{HEMA}}\,(\text{J}/\text{g}) \\
 \midrule
-\text{S1} & 977 & 117 & 11.7 & -\\
-\text{S2} & 1636 & 117 & 11.7 & 5 \\
-\text{S3} & 330 & 93 & 9.3 & - \\
+\text{S1} & 78 & 8.4 & 977 & 117 & 11.7 & -\\
+\text{S2} & 81 & 13.5 & 1636 & 117 & 11.7 & 5 \\
+\text{S3} & 62 & 3.6 & 330 & 93 & 9.3 & - \\
 \bottomrule
 \end{array}
 $
@@ -412,7 +413,7 @@ $
 \bottomrule
 \end{array}
 $
-\caption{Water absorption measurements.}
+\caption{Water absorption measurements at room temperature.}
 \label{tab:wabs}
 \end{table}\\
 
