--- a/Polymers lab/1/Polymers 1.tex
+++ b/Polymers lab/1/Polymers 1.tex
@@ -56,6 +56,7 @@ width0pt\right\delimright_{\rlap{$\scriptstyle#3$}}$};}}
 \usepackage[margin=1in,headsep=.3in]{geometry}
 \usepackage[suftesi]{frontespizio}
 \usepackage{xparse}
+\setlength\parindent{0pt}
 
 \newenvironment{chapterabstract}{%
   \par\nobreak\noindent
@@ -120,6 +121,9 @@ In the powder the following components are present:
 \chemfig{*6(-=-(-(=[2]O)-[::-60]O-[::60]O-[::-60](=[6]O)-(*6(-=-=-=)))=-=)} 
 \end{figure}
 \end{itemize}
+
+\newpage
+
 The liquid is composed by:
 \begin{itemize}
 \item Methyl methacrylate: is the monomer involved in polymerization process.
@@ -168,6 +172,8 @@ $
 \label{tab:kit}
 \end{table}\\
 Additional methyl methacrylate monomer has been provided by University of Trento, together with hydroxyethyl methacrylate monomer. 
+
+\newpage
 
 \subsection{Sample preparation}
 
@@ -242,6 +248,8 @@ Where DP is the degree of polymerization and $m_{mon}\,(\text{g}/\text{mol})$ is
 \text{DP} = \frac{n_{mon}}{n_{rad}}
 \label{eq:dp} 
 \end{equation}
+
+\newpage
 The amount of radicals is equal to double the amount of BPO, due to the peroxide dissociation. Equation \ref{eq:dp} is suitable for the calculation of the degree of polymerization in case of disproportional termination. In case of combination, DP is the double. In a third case, the average of these two DP values has been also evaluated since it represents a more realistic case (MW 50\% - 50\%).\\
 In the second polymerization, it has been considered also the contribution of HEMA according to Equations \ref{eq:dp2} and \ref{eq:mw2}.
 \begin{equation}
@@ -274,6 +282,7 @@ Water absorption has been calculated accordingly to Equation \ref{eq:wabs}.
 \end{equation}
 Where $m_{wet}$ is the mass after soaking and careful removal of superficial film of water. Different measurements of $m_{wet}$ have been taken over the period of one month, allowing for the plot of the water absorption curve with time. Sampling was more frequent in the initial period, while measurements progressively became more sparse in the final one. 
 
+\newpage
 \section{Results and discussion}
 
 \subsection{Heat of polymerization measurements}
@@ -306,6 +315,8 @@ In Figure \ref{fig:Tt} the charts reporting temperature ramp over time for three
 \label{fig:Tt}
 \end{figure}\\
 A correlation between obtained experimental values of specific heat of polymerization of MMA and the theoretical one has been found~\cite{link0}. Theoretical value of $11.0 \,\text{kJ}/\text{mol}$ is in accordance with the experimental one of $11.7 \,\text{kJ}/\text{mol}$. 
+
+\newpage
 
 \subsection{Estimation of polymer molecular weight}
 
@@ -381,8 +392,7 @@ In Figure \ref{fig:wabs1} the charts reporting water absorption over time for fi
 \caption{Water absorption curves for: (a) P1 and (b) P2.}
 \label{fig:wabs1}
 \end{figure}\\
-From charts it can be stated how the presence of HEMA increases the water absorption, while the heat treatment has as opposite effect, reducing the amount of water absorbed by PMMA. These effects are justified by the presence of OH groups in the HEMA monomer, that are responsible of enhanced hydrophilicity of the final polymer. On the other side, the heat treatment seems to be related to a smaller hydrophilicity, probably due to the partial evaporation of non-polymerized monomer and for the higher degree of polymerization induced by an increase of temperature and thus the kinetics. 
-\newpage
+From charts it can be stated how the presence of HEMA increases the water absorption, while the heat treatment has as opposite effect, reducing the amount of water absorbed by PMMA. These effects are justified by the presence of OH groups in the HEMA monomer, that are responsible of enhanced hydrophilicity of the final polymer. On the other side, the heat treatment seems to be related to a smaller hydrophilicity, probably due to the partial evaporation of non-polymerized monomer and for the higher degree of polymerization induced by an increase of temperature and thus the kinetics. \\
 In Figure \ref{fig:wabs2} the charts reporting water absorption over time for the three polymerizations are reported, considering spheroidal samples. 
 \begin{figure}[htp]
 \centering
@@ -392,7 +402,9 @@ In Figure \ref{fig:wabs2} the charts reporting water absorption over time for th
 \label{fig:wabs2}
 \end{figure}
 
-The second chart is the less precise. This can be explained by the poor control over the sample during processing, indeed polymerization has abruptly started still during formation, with strong release of heat (as seen also in heat of polymerization measurements, where the heat ramp starts from about $50^\circ$C) and thus poor control of the porosity. Manipulation and formation of the sample was stopped in favor of the temperature ramp measurement. The third sample S3 has a completely different behavior in water absorption with respect to S1 and S2. This can be related to a much higher amount of open porosity, macroscopically visible by sample examination. Although this remarkable difference, literature results of PMMA water absorption are closer to S3 and sticks results, about 2\%. After about two weeks from initial soaking, the water absorption reaches a plateau. 
+The second chart is the less precise. This can be explained by the poor control over the sample during processing, indeed polymerization has abruptly started still during formation, with strong release of heat (as seen also in heat of polymerization measurements, where the heat ramp starts from about $50^\circ$C) and thus poor control of the porosity. Manipulation and formation of the sample was stopped in favor of the temperature ramp measurement. The third sample S3 has a completely different behavior in water absorption with respect to S1 and S2. This can be related to a much higher amount of open porosity, macroscopically visible by sample examination. 
+\newpage
+Although this remarkable difference, literature results of PMMA water absorption are closer to S3 and sticks results, about 2\%. After about two weeks from initial soaking, the water absorption reaches a plateau. 
 
 In Table \ref{tab:wabs} the results of water absorption for sticks and spheroids are reported, after 50 days from the soaking. 
 \begin{table}[htp]
