--- a/Uni/Polymers (riassunti)/Nomenclature and structure.tex
+++ b/Uni/Polymers (riassunti)/Nomenclature and structure.tex
@@ -284,4 +284,23 @@ $
 	\text{rate} = A\cdot e^\frac{-E_\text{dyn}}{2.303 \cdot RT} \quad \rightarrow \quad  \log{\text{rate}} = A -\frac{E_\text{iso}}{2.303 \cdot RT}
 \end{equation}
 
+\begin{equation}
+	p_\text{gel,C} = \frac{2}{\bar{f}} 
+\end{equation}
+
+\begin{equation}
+	p_\text{gel,FS} = \frac{1}{\bar{f}-1} 
+\end{equation}
+
+\begin{equation}
+	\bar{f} = \frac{f_\text{iso}\cdot \text{MW}_\text{eq,iso}+ f_\text{alcohol}\cdot \text{MW}_\text{eq,alc}}{\text{MW}_\text{eq,iso} +\text{MW}_\text{eq,alc}}
+\end{equation}
+
+\chemfig{Cl-Si(-[2]CH_3)(-[6]Cl)-[,1.4]Cl + 3H_2 O \qquad \rightarrow \qquad  HO-Si(-[2]CH_3)(-[6]OH)-OH}  
+
+
+\begin{equation}
+	\log{a_T} = \frac{\Delta H}{R} \cdot \Bigl(\frac{1}{T}-\frac{1}{T_0}\Bigl)
+\end{equation}
+
 \end{document}
