deg, formule, frontespizio, appendix

--- a/Polymers lab/2/Lab 2.tex
+++ b/Polymers lab/2/Lab 2.tex
@@ -114,7 +114,7 @@ PET bottles have been produced by injection blow molding, a process in which a c
 
 \begin{figure}[htp]
 	\centering
-	{\includegraphics[scale=0.3]{pe_chem}}
+	{\includegraphics[scale=0.12]{pe_chem}}
 	\captionsetup{justification=centering}
 	\label{fig:PE}
 \end{figure}
@@ -133,7 +133,7 @@ PE is a semicrystalline polymer and due to its low glass transition temperature 
 
 \begin{figure}[htp]
 	\centering
-	{\includegraphics[scale=0.06]{ps_chem}}
+	{\includegraphics[scale=0.16]{ps_chem}}
 	\captionsetup{justification=centering}
 	\label{fig:PE}
 \end{figure}
@@ -154,7 +154,7 @@ PS presents an aromatic ring in his structure that leads to a steric envelope re
 
 \begin{figure}[htp]
 	\centering
-	{\includegraphics[scale=0.32]{pp_chem}}
+	{\includegraphics[scale=0.17]{pp_chem}}
 	\captionsetup{justification=centering}
 	\label{fig:PE}
 \end{figure}
@@ -174,7 +174,7 @@ PP is a tough and rigid thermoplastic material. Isotactic conformation is obtain
 
 \begin{figure}[htp]
 	\centering
-	{\includegraphics[scale=0.45]{pet_chem}}
+	{\includegraphics[scale=0.25]{pet_chem}}
 	\captionsetup{justification=centering}
 	\label{fig:PE}
 \end{figure}
@@ -193,7 +193,7 @@ PET is a naturally colorless, semi-crystalline material. Some of its most import
 
 \begin{figure}[htp]
 	\centering
-	{\includegraphics[scale=0.05]{pla_chem}}
+	{\includegraphics[scale=0.3]{pla_chem}}
 	\captionsetup{justification=centering}
 	\label{fig:PE}
 \end{figure}
@@ -211,7 +211,7 @@ PLA is an amorphous, biodegradable and bioactive thermoplastic polymer derived f
 
 \begin{figure}[h!]
 	\centering
-	{\includegraphics[scale=0.3]{pmma_chem}}
+	{\includegraphics[scale=0.25]{pmma_chem}}
 	\captionsetup{justification=centering}
 	\label{fig:PE}
 \end{figure}
@@ -507,7 +507,7 @@ Values of density can be extimated knowing the degree of crystallinity of polyme
 
 \subsubsection{Effect of DEG in PET}
 
-Obtained melting temperature for PET is about $251^\circ$C, thus the amount of DEG can be estimated to 3.8\%. 
+Obtained melting temperature for PET is about $251^\circ$C, thus the amount of DEG can be estimated to 3.8\%, accordingly to Equation \ref{eq:DEG}. In the Appendix a table from the literature is reported.
 
 \subsection{Density measurements}
 
@@ -640,7 +640,7 @@ of different products contained in the blend added to the ABS rubber, such as oi
 
 \begin{thebibliography}{1}
 
-\bibitem{handbook} Polymer handbook, J. Brandrup, E.H. Immergut.
+\bibitem{handbook} Polymer handbook, J. Brandrup, E.H. Immergut, 
 \bibitem{gommista} HF. Mark et al. Encyclopedia of Polymer Science and Technology.
 \bibitem{densità} ASTM D792 "Standard test methods for density and specific gravity of plastics by displacement".
 \bibitem{gruppo1} Previous laboratory activities of Group 1 PME 2018/19, University of Trento. 
@@ -700,5 +700,13 @@ $
 \caption{Weight and density of PMMA samples.}
 \label{tab:apmma}
 \end{table}
+
+\subsection	{DEG effect}
+
+\begin{figure}[h!]
+\centering
+{\includegraphics[scale=0.4]{DEG}} \quad 
+\captionsetup{justification=centering}
+\end{figure}\\
 
 \end{document}
