--- a/Polymers lab/2/Lab 2.tex
+++ b/Polymers lab/2/Lab 2.tex
@@ -379,7 +379,7 @@ In the last heat treatment it has been observed that PLA, as soon as the contact
 \subfloat[][]
 {\includegraphics[scale=0.185]{HT2}} \qquad
 \subfloat[][]
-{\includegraphics[scale=0.25]{HT3}}
+{\includegraphics[scale=0.33]{HT3}}
 \captionsetup{justification=centering}
 \caption{Samples after heat treatments: \\ a) T1, b) T2  c) T3.}
 \label{fig:HT}
@@ -640,8 +640,8 @@ of different products contained in the blend added to the ABS rubber, such as oi
 
 \begin{thebibliography}{1}
 
-\bibitem{handbook} Polymer handbook, J. Brandrup, E.H. Immergut, 
-\bibitem{gommista} HF. Mark et al. Encyclopedia of Polymer Science and Technology.
+\bibitem{handbook} Polymer handbook, J. Brandrup, E.H. Immergut, fourth edition, Wiley 2003.
+\bibitem{gommista} HF. Mark et al. Encyclopedia of Polymer Science and Technology, third edition, Wiley 2014.
 \bibitem{densità} ASTM D792 "Standard test methods for density and specific gravity of plastics by displacement".
 \bibitem{gruppo1} Previous laboratory activities of Group 1 PME 2018/19, University of Trento. 
 
@@ -707,6 +707,6 @@ $
 \centering
 {\includegraphics[scale=0.4]{DEG}} \quad 
 \captionsetup{justification=centering}
-\end{figure}\\
+\end{figure}
 
 \end{document}
