--- a/Polymers lab/1/Polymers 1.tex
+++ b/Polymers lab/1/Polymers 1.tex
@@ -93,6 +93,8 @@ width0pt\right\delimright_{\rlap{$\scriptstyle#3$}}$};}}
 
 \begin{document}
 
+\includepdf[pages=-]{frontespizio1.pdf}
+
 \begin{chapterabstract}
 
 In this work a bone cement made of polymethyl methacrylate has been studied, paying attention to the heat released during polymerization and water absorption. The effect of the changed amount of monomer methyl methacrylate and the addition of a second monomer hydroxyethyl methacrylate have been studied. 
