--- a/Polymers lab/2/Lab 2.tex
+++ b/Polymers lab/2/Lab 2.tex
@@ -95,6 +95,8 @@ width0pt\right\delimright_{\rlap{$\scriptstyle#3$}}$};}}
 
 \begin{document}
 
+\includepdf[pages=-]{frontespizio2.pdf}
+
 \begin{chapterabstract}
 
 In this work several plastic objects have been studied both thermically and microstructurally: in particular, density measurements, crystallinity measurements, DSC, TGA and solvent effects have been studied. The aim of the work is to find a correlation between thermal properties, crystallinity and stability on heating and solvent attack. 
