--- a/Polymers lab/2/Lab 2.tex
+++ b/Polymers lab/2/Lab 2.tex
@@ -229,23 +229,27 @@ The polymeric materials that have been used are: plastic yogurt cup (PS), dispos
 \begin{table}[htp]
 	\centering
 	$
-	\begin{array}{lccc}
+	\begin{array}{lcccc}
 	\toprule
-	\textbf{Materials} &  \mathbf{Density}\,(g/cm^{3})  & \mathbf{T_{g}} (^\circ\text{C}) \ & \mathbf{T_{m}}(^\circ\text{C}) \\
+	\textbf{Materials} &  \mathbf{Density}\, (\text{g/cm}^3)  & \mathbf{T_{g}} (^\circ\text{C}) \ & \mathbf{T_{m}}(^\circ\text{C}) & \bm{\Delta} \mathbf{H_m} (\text{J/g}) \\
 	\midrule
-	\text{High density polyethylene (PE)} & 0.94 & -110 & 138 \\
-	\text{Polystyrene (PS)} & 1.04 & 100 & -  \\
-	\text{Polypropylene (PP)} & 0.95 & -10  & 165  \\
-	\text{Polyethylene terephthalate (PET)} & 1.38 & 70 & 265  \\
-	\text{Polylactic acid (PLA)} & 1.27 & 50 & 140 \\
-	\text{Polymethyl methacrylate (PMMA)} & 1.18 & 105  & - \\
+	\text{High density polyethylene (PE)} & 0.95 & \text{-}110 & 138 & -\\
+	\\
+	\text{Polystyrene (PS)} & 1.04^{(a)} & 100 & - & 86.54  \\
+	& 1.11 ^{(c)} & & & \\
+	\text{Polypropylene (PP)} & 0.85 ^{(a)} & \text{-}10  & 165  & 209\\
+	& 0.94 ^{(c)} & & & \\
+	\text{Polyethylene terephthalate (PET)} & 1.33 ^{(a)} & 70 & 265 & 140 \\
+	& 1.51 ^{(c)} & & & \\
+	\text{Polylactic acid (PLA)} & 1.21 ^{(a)} & 50 & 140 & 93.65\\
+	& 1.30 ^{(c)} & & & \\
+	\text{Polymethyl methacrylate (PMMA)} & 1.18 & 105  & - & -\\
 	\bottomrule
 	\end{array}
 	$
-	\caption{Glass transition and melting temperatures.}
+	\caption{Some properties of used materials where: \\ (a) 100\% amorphous and (c) 100\% crystalline.}
 	\label{tab:tgtm}
 \end{table}\\
-\\
 Tire samples have been provided by Marangoni (Rovereto (TN), Italy) and are mainly composed by styrene-butadiene rubber (SBR), carbon black, sulfur, accellerators and other additives. All the others objects used in the experimental activity have been provided by University of Trento. \par
 
 The solvents used in this laboratory experience to evaluate the effect on plastics are:
