--- a/Polymers lab/3/LAB 3.tex
+++ b/Polymers lab/3/LAB 3.tex
@@ -95,6 +95,8 @@ width0pt\right\delimright_{\rlap{$\scriptstyle#3$}}$};}}
 
 \begin{document}
 
+\includepdf[pages=-]{frontespizio3.pdf}
+
 \begin{chapterabstract}
 
 Different polymer properties were evaluated by performing Vicat test, melt flow index (MFI) analysis, Shore hardness and limiting oxygen flammability (LOI).
@@ -331,7 +333,7 @@ In Figure \ref{fig:dieswell} die swell measurements for PP-1 sample in function 
 	\subfloat[][]
 	{\includegraphics[scale=0.29]{dieswell}} \quad 
 	\subfloat[][]
-	{\includegraphics[scale=0.13]{dieswell2}}
+	{\includegraphics[scale=0.29]{dieswell2}}
 	\captionsetup{justification=centering}
 	\caption{Die swelling for PP–1 sample.}
 	\label{fig:dieswell}
@@ -503,7 +505,7 @@ The LOI is the minimum oxygen percentage needed to ignite a polymer bar which wi
 
 \begin{thebibliography}{1}
 
-\bibitem{handbook} Polymer handbook, J. Brandrup, E.H. Immergut.
+\bibitem{handbook} Polymer handbook, J. Brandrup, E.H. Immergut, fourth edition, Wiley 2003.
 \bibitem{MFI} ASTM D1238–10 "Melt flow rates of thermoplastics by extrusion". 
 \bibitem{LOI} ASTM D2863–06a "Standard test method for measuring the minimum oxygen concentration to support candle-like combustion of plastics".
 \bibitem{VICAT} ASTM D1525 "Standard test method for Vicat softening temperature of plastics"
