--- a/Polymers lab/1/Polymers 1.tex
+++ b/Polymers lab/1/Polymers 1.tex
@@ -284,6 +284,10 @@ Water absorption has been calculated accordingly to Equation \ref{eq:wabs}.
 \end{equation}
 Where $m_{wet}$ is the mass after soaking and careful removal of superficial film of water. Different measurements of $m_{wet}$ have been taken over the period of one month, allowing for the plot of the water absorption curve with time. Sampling was more frequent in the initial period, while measurements progressively became more sparse in the final one. 
 
+\subsubsection{Drying of samples after water soaking}
+
+Samples after water absorption of three months (90 days) have been subjected to a drying process in oven at 85°C for 96 hours. The samples have been weighted with instrument Mettler PM460 (sens. $\pm 0.001\,\text{g}$) and the weight loss percent reported. 
+
 \newpage
 \section{Results and discussion}
 
@@ -432,6 +436,30 @@ $
 
 \subsubsection{Drying of samples after water soaking}
 
+Dried samples percent weight losses are reported in Table \ref{tab:dried}. 
+\begin{table}[htp]
+\centering
+$
+\begin{array}{lc}
+\toprule
+\textbf{Sample} & \textbf{$\%$weight loss}  \\
+\midrule
+\text{P1} & -0.82 \pm0.02 \\
+\text{P1HT} & -0.35\pm0.01 \\
+\text{P2} & -0.67\pm0.24 \\
+\text{P2HT} & -1.22\pm1.31 \\
+\midrule
+\text{S1} & -0.09 \\
+\text{S2} & 0.02 \\
+\text{S3} & -0.37 \\
+\bottomrule
+\end{array}
+$
+\caption{Weight losses after drying.}
+\label{tab:dried}
+\end{table}\\
+The mass loss is related to the loss of unreacted monomer still present in the bone cement after three months. Of course a certain percent of it is present due to the always lower kinetics of polymerization in time, resulting in a certain degree of unreacted monomer even after very long times. The water soaking had the effect of taking place of the monomer inside the sample and diluting it in the solvent. During the drying process, the water containing the residual monomer has evaporated, resulting in a net mass loss of the samples, compared to the initial one just after polymerization. 
+The mass loss in heat treated sample not containing HEMA (P1HT) is significantly less than the others, a sign that the heat treatment have accelerated the polymerization reaction and the residual unreacted monomer is less. Instead, the heat treated sample containing HEMA is not very representative due to the too high standard deviation. Presence of HEMA in P2 sample is less than the P1 not containing HEMA. 
 
 \section{Conclusions}
 
