--- a/Polymers lab/3/LAB 3.tex
+++ b/Polymers lab/3/LAB 3.tex
@@ -101,7 +101,7 @@ width0pt\right\delimright_{\rlap{$\scriptstyle#3$}}$};}}
 
 Different polymer properties were evaluated by performing Vicat test, melt flow index (MFI) analysis, Shore hardness and limiting oxygen flammability (LOI).
 Vicat test was used to estimate the deformability of three polymers: polycarbonate (PC), acrylonitrile butadiene styrene (ABS) and polypropylene (PP). Since PS and ABS are amorphous polymers, the Vicat temperatures do not change with the load, while for PP, which is a semi crystalline polymer, Vicat temperature varies with the load.
-With MFI analyses some rheological reckonings are possible. First, the MFI increases exponentially with temperature and the applied load; moreover, by testing three different polypropylenes, increasing the MFI, the molecular weight (MW) decreases exponentially. The phenomenon of die swelling also depends on MW: for higher molecular weight, the die swell is lower due to high possibility of orientation of longer chains. The results of MFI calculations were also used to evaluate the activation energy ($E_a$) of viscous flow; for PPH 7079 the average $E_a$ is about 50 kJ/mol.
+With MFI analyses some rheological reckonings are possible. First, the MFI increases exponentially with temperature and the applied load; moreover, by testing three different polypropylenes, increasing the MFI, the molecular weight (MW) decreases exponentially. The phenomenon of die swelling also depends on MW: for higher molecular weight, the die swell is lower due to high possibility of orientation of longer chains. The results of MFI calculations were also used to evaluate the activation energy ($E_a$) of viscous flow; for PPH 7089 the average $E_a$ is about 50 kJ/mol.
 Shore hardness test was used to measure the hardness of different polymers. It was found that the Shore A test is suitable for the softer materials while Shore D is suitable for the harder ones. It is interesting to notice that polyurethane (PU), which is a thermoset polymer, shows a wide range of hardness (Shore A) from 50 to 95.
 Limiting oxygen index was used to investigate the relative flammability of four polymers i.e. polyethylene (PE), PP, PC and ABS. PC has the higher LOI (33\%) resulting less flammable than the others.
 
@@ -111,7 +111,7 @@ Limiting oxygen index was used to investigate the relative flammability of four 
 
 The aim of this laboratory session is to study rheological properties of different polymeric materials, together with thermal evolution of stiffness (Vicat), measurement of hardness (Shore A and D) and flammability (limit oxygen index, LOI). 
 
-\subsection {Materials}
+\subsection {Polymers and products}
 
 A wide selection of polymeric materials has been studied, particularly for hardness measurements, including either thermoplastics and thermosets, semicrystalline and amorphous polymers. In Figure \ref{fig:rubber} samples for hardness measurement are displayed. 
 \begin{figure}[h!]
@@ -192,7 +192,24 @@ Different polymeric samples have been provided by University of Trento to get Vi
 	\caption{Materials used in Shore analyses.}
 	\label{tab:polymers}
 \end{table}
-Three different polypropylene samples have been provided by different companies in order to carry out melt flow index analyses: PPH 7089 (PP–1) (typical melt flow index at 230°C/2.16 kg = 12), Moplen HP 500 N (PP–2) (typical melt flow index at 230°C/2.16 kg = 12) and Borealis (PP–3) (typical melt flow index at 230°C/2.16 kg = 12). For limit oxygen index analyses tested samples are PE, PP, PC and ABS plastics provided by University of Trento. 
+Three different polypropylene samples have been provided by different companies in order to carry out melt flow index analyses, as reported in Table \ref{tab:PP}. 
+\begin{table}[htp]
+	\centering
+	$
+	\begin{array}{llc}
+	\toprule
+	\textbf{Sample} & \textbf{Product name} & \textbf{Typical MFI} \\
+	\midrule
+	\text{PP–1} & \text{PPH 7089} & 12\\
+	\text{PP–2} & \text{Moplen HP 500 N} & 5\\
+	\text{PP–3} & \text{Borealis} & 25\\
+	\bottomrule
+	\end{array}
+	$
+	\caption{Polypropylene materials used.}
+	\label{tab:PP}
+\end{table}
+For limit oxygen index analyses tested samples are PE, PP, PC and ABS plastics provided by University of Trento. 
 
 \subsection{Sample preparation}
 
