--- a/Polymers lab/3/LAB 3.tex
+++ b/Polymers lab/3/LAB 3.tex
@@ -522,9 +522,9 @@ The LOI is the minimum oxygen percentage needed to ignite a polymer bar which wi
 \begin{thebibliography}{1}
 
 \bibitem{handbook} Polymer handbook, J. Brandrup, E.H. Immergut, fourth edition, Wiley 2003.
-\bibitem{MFI} ASTM D1238–10 "Melt flow rates of thermoplastics by extrusion". 
-\bibitem{LOI} ASTM D2863–06a "Standard test method for measuring the minimum oxygen concentration to support candle-like combustion of plastics".
-\bibitem{VICAT} ASTM D1525 "Standard test method for Vicat softening temperature of plastics"
+\bibitem{MFI} ASTM D1238–10 “Melt flow rates of thermoplastics by extrusion”. 
+\bibitem{LOI} ASTM D2863–06a “Standard test method for measuring the minimum oxygen concentration to support candle-like combustion of plastics”.
+\bibitem{VICAT} ASTM D1525 “Standard test method for Vicat softening temperature of plastics”
 \bibitem{swell} A review of extrudate swell in polymers - C. Sirisinha – J.Sci.Soc.Thailand 23-259-280
 
 \end{thebibliography}
