--- a/Polymers lab/1/Polymers 1.tex
+++ b/Polymers lab/1/Polymers 1.tex
@@ -438,6 +438,30 @@ $
 This laboratory activity has permitted to study the radical polymerization process, in order to achieve a better understanding of the theoretical concepts at the base of it.
 In the second polymerization the heat released during the reaction is higher than the two other cases due to the presence of a larger amount of monomer MMA. It has also been noticed that the presence of HEMA doesn't influence the heat production. Moreover, the value of heat calculated in the first polymerization is comparable with the theoretical one. The third polymerization highlights that, due to the high surface/volume ratio, the heat dissipation is more significant. About molecular weight, as expected, in the first and third case the resulting values are almost equal, while in the second one are higher and this can be explained by the additional quantity of MMA to the base kit in the second polymerization process. The addition of HEMA at the beginning has led to an higher water absorption due to its hydrophilicity. From the heat treatment analysis it has been noticed a very slightly decrease of water absorption. This is due to the partial evaporation of non-polymerized monomer and to the higher degree of polymerization induced by the higher temperature.
 
+\newpage
+
+\section{Appendix}
+
+\subsection{heat treatement weigth measurement}
+
+\begin{table}[htp]
+	\centering
+	$
+	\begin{array}{ccc}
+	\toprule
+	\textbf{Sample} & \bm{m_{i}} & \bm{m_{f}}\\
+	\text{P1B} & 2.6534 & 2.6498 \\
+	\text{P1C} & 2.1869 & 2.1841 \\
+	\text{P2B} & 3.0995 & 3.0969 \\
+	\text{P2C} & 2.3333 & 2.3304 \\
+	\bottomrule
+	\end{array}
+	$
+	\caption{Weight measurements before and after heat treatment.}
+	\label{tab:weight}
+\end{table}\\
+
+where $\bm{m_{i}}$ is the mass of samples before heat treatment and $\bm{m_{f}}$ is the mass of samples after heat treatment.
 
 \newpage
 \thispagestyle{empty}
