--- a/Polymers lab/1/Polymers 1.tex
+++ b/Polymers lab/1/Polymers 1.tex
@@ -45,6 +45,7 @@ width0pt\right\delimright_{\rlap{$\scriptstyle#3$}}$};}}
 	labelfont={sf,bf}	
 }
 \usepackage{float}
+\usepackage[toc,page]{appendix}
 \floatstyle{plaintop}
 \restylefloat{table}
 \usepackage{multirow}
@@ -440,9 +441,9 @@ In the second polymerization the heat released during the reaction is higher tha
 
 \newpage
 
-\section{Appendix}
+\begin{appendices}
 
-\subsection{heat treatement weigth measurement}
+\section{Heat treatement weight measurements}
 
 \begin{table}[htp]
 	\centering
@@ -450,22 +451,24 @@ In the second polymerization the heat released during the reaction is higher tha
 	\begin{array}{ccc}
 	\toprule
 	\textbf{Sample} & \bm{m_{i}} & \bm{m_{f}}\\
-	\text{P1B} & 2.6534 & 2.6498 \\
-	\text{P1C} & 2.1869 & 2.1841 \\
-	\text{P2B} & 3.0995 & 3.0969 \\
-	\text{P2C} & 2.3333 & 2.3304 \\
+	\midrule
+	\text{P1–B} & 2.6534 & 2.6498 \\
+	\text{P1–C} & 2.1869 & 2.1841 \\
+	\text{P2–B} & 3.0995 & 3.0969 \\
+	\text{P2–C} & 2.3333 & 2.3304 \\
 	\bottomrule
 	\end{array}
 	$
 	\caption{Weight measurements before and after heat treatment.}
 	\label{tab:weight}
-\end{table}\\
+\end{table}
+Where ${m_{i}}$ is the mass of samples before heat treatment and ${m_{f}}$ is the mass of samples after heat treatment.
 
-where $\bm{m_{i}}$ is the mass of samples before heat treatment and $\bm{m_{f}}$ is the mass of samples after heat treatment.
+\end{appendices}
 
 \newpage
-\thispagestyle{empty}
 
+\thispagestyle{empty}
 
 \begin{thebibliography}{11}
 
