--- a/Polymers lab/4/LAB 4.tex
+++ b/Polymers lab/4/LAB 4.tex
@@ -103,10 +103,8 @@ Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus at est non arcu
 
 \end{chapterabstract} 
 
-
-
 \section{Introduction}
 
-
+\section{}
 
 \end{document}
