--- a/Polymers lab/4/LAB 4.tex
+++ b/Polymers lab/4/LAB 4.tex
@@ -105,6 +105,13 @@ Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus at est non arcu
 
 \section{Introduction}
 
-\section{}
+\section{Experimental activity}
+
+\subsection{Compression molding}
+
+Prepared amount of polypropylene mixture has been used for compression molding process. A press by Carver has been used, as illustrated in Figure \ref{fig:press}. 
+\begin{figure}
+	\includegraphics{
+\end{figure}
 
 \end{document}
